feat: add custom pagination response wrapper for clean API design